# VBANReceptor.vst3

./: CMakeLists.txt  README.md  VBANReceptor.jucer  mc16c
Builds/Android/: local.properties  settings.gradle
Builds/Android/app/: CMakeLists.txt  build.gradle
Builds/Android/app/src/release/res/values/: string.xml
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-AU.plist  Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/VBANReceptor.xcodeproj/: project.pbxproj
Builds/VisualStudio2017/: VBANReceptor.sln  VBANReceptor_LV2ManifestHelper.vcxproj  VBANReceptor_LV2Plugin.vcxproj  VBANReceptor_SharedCode.vcxproj  VBANReceptor_SharedCode.vcxproj.filters  VBANReceptor_StandalonePlugin.vcxproj  VBANReceptor_VST.vcxproj  VBANReceptor_VST3.vcxproj  VBANReceptor_VST3ManifestHelper.vcxproj  resources.rc
Builds/iOS/: Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist
Builds/iOS/VBANReceptor.xcodeproj/: project.pbxproj
JuceLibraryCode/: JuceHeader.h  JuceLV2Defines.h  JucePluginDefines.h
Source/: AudioParameterUInt8.cpp  AudioParameterUInt8.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ringbuffer.h  vban_functions.cpp  vban_functions.h
